--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <!-- header -->
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="logo" class="header__logo" />
