--- a/index.html
+++ b/index.html
@@ -30,5 +30,27 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-mb-8">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous People
+          </h2>
+        </div>
+        <div class="u-center-text u-mb-8">
+          <div class="u-center-text u-mb-8 u-dark">
+            <h2 class="heading-test">
+              W<span class="u-inter">h</span>ee<span class="u-inter">l</span> N’
+              Dea<span class="u-inter">l</span>
+            </h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">Text</div>
+          <div class="col-1-of-2">Image</div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
